--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ jspm_packages/
 .env.production.local
 *.pem
 
+CRUX_API_KEY=AIzaSyCCSOx25vrb5z0tbedCB3_JRzzbVW6Uwgw
+
 # ----------------------
 # 3. Expo & React Native
 # ----------------------
